--- a/product-creative-content-6.html
+++ b/product-creative-content-6.html
@@ -76,7 +76,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="shop-pagination.html">Shop</a></li>
                         <li><a href="index.html">BOOZOŃ</a></li>
-                        <li class="active">Mulfunction Box</li>
+                        <li class="active">T-Shirt</li>
                     </ol>
                 </div>
               <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 ">
