--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                     <div class="navigation__center"><a class="ps-logo" href="index.html"><img src="images/logo.png" alt=""></a></div>
                     <div class="navigation__right">
                         <ul class="menu">
-                            <li><a href="#">About Us</a></li>
-                            <li><a href="#">Contact Us</a></li>
+                            <li><a href="about-us.html">About Us</a></li>
+                            <li><a href="contact-us.html">Contact Us</a></li>
                         </ul>
                     </div>
                 </nav>
