--- a/about-us.html
+++ b/about-us.html
@@ -66,6 +66,25 @@
                 </nav>
             </div>
     </header>
+    <div class="header header--mobile">
+        <div class="container"><a class="ps-logo" href="index.html"><img src="images/logo.png" alt=""></a>
+            <div class="menu-toggle"><span></span></div>
+            <ul class="header__actions">
+                <li><a class="" href="#"><i class=""></i></a></li>
+                <li><a href="#"><i class=""></i></a></li>
+                <li><a class="" href="#"><i class=""></i><span><i></i></span></a></li>
+            </ul>
+            <ul class="menu">
+                <li class=""><a href="index.html">Home</a>
+                </li>
+                <li><a href="shop-pagination.html">Shop</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Contact Us</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </div>
     <div class="ps-about-me bg--cover" data-background="images/about-me.jpg">
         <div class="container">
             <div class="ps-about-me__info">
