--- a/contact-us.html
+++ b/contact-us.html
@@ -78,8 +78,8 @@
                 <li class=""><a href="index.html">Home</a>
                 </li>
                 <li><a href="shop-pagination.html">Shop</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="about-us.html">About Us</a></li>
+                <li><a href="contact-us.html">Contact Us</a></li>
                     </ul>
                 </li>
             </ul>
