--- a/shop-category-Accesories.html
+++ b/shop-category-Accesories.html
@@ -106,7 +106,7 @@
                        <div class="grid-item large">
                             <div class="grid-item__content-wrapper">
                                 <div class="ps-product--metro">
-                                    <div class="ps-product__thumbnail"><img src="images/shop/Accesories-5.png" alt=""><a class="ps-btn ps-product__shopping" href="product-creative-content-20.html"><i class="exist-minicart"></i>View Item</a>
+                                    <div class="ps-product__thumbnail"><img src="images/shop/Accesories-5.png" alt=""><a class="ps-btn ps-product__shopping" href="product-creative-content-20.html"><i class="exist-minicart"></i>SHOP NOW</a>
                                         <ul class="ps-product__actions">
                                             <li><a href="#"><i class="exist-heart"></i></a></li>
                                             <li><a href="#"><i class="exist-compare"></i></a></li>
