--- a/shop-pagination.html
+++ b/shop-pagination.html
@@ -52,7 +52,7 @@
                 <nav class="navigation">
                     <div class="navigation__left">
                         <ul class="menu">
-                            <li><a href="#">Home</a></li>
+                            <li><a href="index.html">Home</a></li>
                             <li><a href="shop-pagination.html">Shop</a></li>
                         </ul>
                     </div>
@@ -241,8 +241,7 @@
                                     <li><a class="ps-modal-trigger" href="#quick-view" data-label="Quick View"><i class="exist-quickview"></i></a></li>
                                 </ul>
                             </div>
-                            <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-6.html"> T-shirt 1</a><span class="ps-product__price">$1250.00
-                            <del>$725.00</del></span>
+                            <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-6.html"> STACKO Tee Black</a><span class="ps-product__price">IDR.195.000,-
                             </div>
                         </div>
                     </div>
@@ -264,7 +263,7 @@
                                     <li><a class="ps-modal-trigger" href="#quick-view" data-label="Quick View"><i class="exist-quickview"></i></a></li>
                                 </ul>
                             </div>
-                            <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-7.html">T-shirt 2</a><span class="ps-product__price">$350.00</span>
+                            <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-7.html">Ducksquack Tee Black</a><span class="ps-product__price">IDR.195.000,-</span>
                             </div>
                         </div>
                     </div>
@@ -287,7 +286,7 @@
                                     <li><a class="ps-modal-trigger" href="#quick-view" data-label="Quick View"><i class="exist-quickview"></i></a></li>
                                 </ul>
                             </div>
-                            <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-8.html">T-short3</a><span class="ps-product__price">$5250.00</span>
+                            <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-8.html">BLOOMY Tee white</a><span class="ps-product__price">IDR.195.000,-</span>
                             </div>
                         </div>
                     </div>
@@ -309,7 +308,7 @@
                                     <li><a class="ps-modal-trigger" href="#quick-view" data-label="Quick View"><i class="exist-quickview"></i></a></li>
                                 </ul>
                             </div>
-                            <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-9.html">T-shirt 4</a><span class="ps-product__price">$5250.00</span>
+                            <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-9.html">Magic Tee White</a><span class="ps-product__price">IDR.195.000,-</span>
                             </div>
                         </div>
                     </div>
@@ -331,7 +330,7 @@
                                     <li><a class="ps-modal-trigger" href="#quick-view" data-label="Quick View"><i class="exist-quickview"></i></a></li>
                                 </ul>
                             </div>
-                            <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-10.html">T-shirt 5</a><span class="ps-product__price">$5250.00</span>
+                            <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-10.html">Burning Rose Tee Baby Blue</a><span class="ps-product__price">IDR.195.000,-</span>
                             </div>
                         </div>
                     </div>
@@ -354,7 +353,7 @@
                                     <li><a class="ps-modal-trigger" href="#quick-view" data-label="Quick View"><i class="exist-quickview"></i></a></li>
                                 </ul>
                             </div>
-                            <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-11.html"> T-shirt 6</a><span class="ps-product__price">$5250.00</span>
+                            <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-11.html"> FRITILLARY Tee Beige</a><span class="ps-product__price">IDR.195.000,-</span>
                             </div>
                         </div>
                     </div>
@@ -378,7 +377,7 @@
                                     <li><a class="ps-modal-trigger" href="#quick-view" data-label="Quick View"><i class="exist-quickview"></i></a></li>
                                 </ul>
                             </div>
-                            <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-12.html">T-shirt 7</a><span class="ps-product__price">$5250.00</span>
+                            <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-12.html"> Tour Longsleeve Tee White</a><span class="ps-product__price">IDR.195.000,-</span>
                             </div>
                         </div>
                     </div>
