--- a/product-creative-content-13.html
+++ b/product-creative-content-13.html
@@ -107,9 +107,9 @@
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 ">
                     <div class="ps-product__info">
-                        <h1 class="ps-product__title">Hoodie
-                            <br>Not a Boozehound</h1>
-                        <h4 class="ps-product__price">IDR.149.000,-</h4>
+                        <h1 class="ps-product__title">[POICON]
+                            <br>Fear Of None</h1>
+                        <h4 class="ps-product__price">IDR.350.000,-</h4>
                         <div class="ps-product__rating">
                             <select class="ps-rating">
                                 <option value="1">1</option>
@@ -120,10 +120,11 @@
                                  </select>
                         </div>
                         <div class="ps-product__short-desc">
-                            <p>[SEE-THROUGH 2.0]
-                               <br> Not A Boozehound
+                            <p>[POICON]
+                               <br> Fear Of None Hoodie Beige
                                 <br>--------
-                              <br>  See-through is Our Multifunction transparent box + Magnet, with UV print.
+                              <br>  330gsm Premium Hooded Sweatshirt (Stussy Material).
+                              <br>  Printed in plastisol on the front and back.
                               <br>  Free cricket, sticker, giftcard. 
 
                             <br>    Available on LINE@ and Boozon flagship store...
@@ -131,21 +132,28 @@
                         </div>
                         <div class="ps-product__variants">
                             <h5>Color</h5>
-                            <div class="ps-radio ps-radio--inline white">
+                            <div class="ps-radio ps-radio--inline green">
                                 <input class="form-control" type="radio" id="color-3" name="type-1">
                                 <label for="color-3"></label>
                             </div>
                             </div>
-                            <h5 class="mt-30"> Size : 500 gr</h5>
+                             <h5 class="mt-30"> Size</h5>
+                            <ul class="ps-product__size">
+                                <li><a href="#"><span>S</span></a></li>
+                                <li class="current"><a href="#"><span>M</span></a></li>
+                                <li><a href="#"><span>L</span></a></li>
+                                <li><a href="#"><span>XL</span></a></li>
+                            </ul>
+
                         <div class="ps-product__divider"></div>
                         <div class="ps-product__shopping">
-                            <button class="ps-btn ps-btn--black"><i class="exist-minicart mr-5"></i> Shop Now</button>
+                            <a class="ps-btn ps-btn--black" href="http://line.me/ti/p/~@booz.on"><i class="exist-minicart mr-5"></i> Shop Now</a>
                             <ul class="ps-product__cart-action">
                                 <li><a href="#"><i class="exist-heart"></i>Best Seller Product</a></li>
                                 <li><a href="#"><i class=""></i></a></li>
                             </ul>
                             <p><strong>SKU:</strong>N/A</p>
-                            <p><strong>Category:</strong><a href="#">Mulfunction Box</a>,<a href="#"></a></p>
+                            <p><strong>Category:</strong><a href="#">Hoodie</a>,<a href="#"></a></p>
                         </div>
                         <div class="ps-product__divider"></div>
                         <p class="ps-product__sharing">Share:<a href="www.facebook.com"><i class="fa fa-facebook"></i></a><a href="wwww.twitter.com"><i class="fa fa-twitter"></i></a><a href="www.instagram.com"><i class="fa fa-instagram"></i></a></p>
@@ -190,99 +198,96 @@
             <div class="ps-slider--related-products owl-slider" data-owl-auto="true" data-owl-loop="true" data-owl-speed="5000" data-owl-gap="20" data-owl-nav="true" data-owl-dots="false" data-owl-item="6" data-owl-item-xs="1" data-owl-item-sm="1" data-owl-item-md="1" data-owl-item-lg="1" data-owl-duration="1000" data-owl-mousedrag="on" data-owl-nav-left="&lt;i class='exist-leftarrow'&gt;&lt;/i&gt;" data-owl-nav-right="&lt;i class='exist-rightarrow'&gt;&lt;/i&gt;">
                 <div class="ps-product--1" data-mh="product-item">
                     <div class="ps-product__thumbnail">
-                        <div class="ps-badge ps-badge--hot"><span>hot</span></div>
-                        <div class="ps-badge ps-badge--sale-off ps-badge--2nd"><span>-25%</span></div><img src="images/product/home-1/1.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
+                        <div class="ps-badge ps-badge--hot"><span>Hot</span></div>
+                        <div class="ps-badge ps-badge--sale-off ps-badge--2nd"><span>Best Seller</span></div><img src="images/product/home-1/1.jpg" alt=""><a class="ps-btn ps-product__shopping" href="product-creative-content-1.html"><i class="exist-minicart"></i>View Item</a>
                         <ul class="ps-product__actions">
                             <li><a href="#" data-label="Favorite"><i class="exist-heart"></i></a></li>
                             <li><a href="#" data-label="Compare"><i class="exist-compare"></i></a></li>
                             <li><a class="ps-modal-trigger" href="#quick-view" data-label="Quick View"><i class="exist-quickview"></i></a></li>
                         </ul>
                     </div>
-                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html"> T-shirt with slogan</a><span class="ps-product__price">$5250.00</span>
+                    <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-1.html">Take Your Time</a><span class="ps-product__price">IDR.149.000,-</span>
                     </div>
                 </div>
                 <div class="ps-product--1" data-mh="product-item">
-                    <div class="ps-product__thumbnail"><img src="images/product/home-1/2.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
+                    <div class="ps-product__thumbnail"><img src="images/product/home-1/2.jpg" alt=""><a class="ps-btn ps-product__shopping" href="product-creative-content-2.html"><i class="exist-minicart"></i>View Item</a>
                         <ul class="ps-product__actions">
                             <li><a href="#" data-label="Favorite"><i class="exist-heart"></i></a></li>
                             <li><a href="#" data-label="Compare"><i class="exist-compare"></i></a></li>
                             <li><a class="ps-modal-trigger" href="#quick-view" data-label="Quick View"><i class="exist-quickview"></i></a></li>
                         </ul>
                     </div>
-                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html"> White crossbody bag</a><span class="ps-product__price">$1250.00</span>
-                    </div>
-                </div>
-                <div class="ps-product--1" data-mh="product-item">
-                    <div class="ps-product__thumbnail">
-                        <div class="ps-badge ps-badge--new"><span>New</span></div><img src="images/product/home-1/3.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
-                        <ul class="ps-product__actions">
-                            <li><a href="#" data-label="Favorite"><i class="exist-heart"></i></a></li>
-                            <li><a href="#" data-label="Compare"><i class="exist-compare"></i></a></li>
-                            <li><a class="ps-modal-trigger" href="#quick-view" data-label="Quick View"><i class="exist-quickview"></i></a></li>
-                        </ul>
-                    </div>
-                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html"> Velvet backpack</a><span class="ps-product__price">$5250.00</span>
+                    <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-2.html">Only Joke & Below</a><span class="ps-product__price">IDR.149.000,-</span>
                     </div>
                 </div>
                 <div class="ps-product--1" data-mh="product-item">
                     <div class="ps-product__thumbnail">
-                        <div class="ps-badge ps-badge--new"><span>New</span></div>
-                        <div class="ps-badge ps-badge--sale-off ps-badge--2nd"><span>-25%</span></div><img src="images/product/home-1/4.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
+                        <div class="ps-badge ps-badge--new"><span>New</span></div><img src="images/product/home-1/3.jpg" alt=""><a class="ps-btn ps-product__shopping" href="product-creative-content-3.html"><i class="exist-minicart"></i>View Item</a>
                         <ul class="ps-product__actions">
                             <li><a href="#" data-label="Favorite"><i class="exist-heart"></i></a></li>
                             <li><a href="#" data-label="Compare"><i class="exist-compare"></i></a></li>
                             <li><a class="ps-modal-trigger" href="#quick-view" data-label="Quick View"><i class="exist-quickview"></i></a></li>
                         </ul>
                     </div>
-                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html"> Square cream sunglasses</a><span class="ps-product__price">$5250.00
-                    <del>$725.00</del></span>
-                    </div>
-                </div>
-                <div class="ps-product--1" data-mh="product-item">
-                    <div class="ps-product__thumbnail"><img src="images/product/home-1/5.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
-                        <ul class="ps-product__actions">
-                            <li><a href="#" data-label="Favorite"><i class="exist-heart"></i></a></li>
-                            <li><a href="#" data-label="Compare"><i class="exist-compare"></i></a></li>
-                            <li><a class="ps-modal-trigger" href="#quick-view" data-label="Quick View"><i class="exist-quickview"></i></a></li>
-                        </ul>
-                    </div>
-                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html"> Shirt Regular fit</a><span class="ps-product__price">$95.00
-                    <del>$725.00</del></span>
-                    </div>
-                </div>
-                <div class="ps-product--1" data-mh="product-item">
-                    <div class="ps-product__thumbnail"><img src="images/product/home-1/6.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
-                        <ul class="ps-product__actions">
-                            <li><a href="#" data-label="Favorite"><i class="exist-heart"></i></a></li>
-                            <li><a href="#" data-label="Compare"><i class="exist-compare"></i></a></li>
-                            <li><a class="ps-modal-trigger" href="#quick-view" data-label="Quick View"><i class="exist-quickview"></i></a></li>
-                        </ul>
-                    </div>
-                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html"> T-shirt with slogan</a><span class="ps-product__price">$1250.00
-                    <del>$725.00</del></span>
-                    </div>
-                </div>
-                <div class="ps-product--1" data-mh="product-item">
-                    <div class="ps-product__thumbnail"><img src="images/product/home-1/7.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
-                        <ul class="ps-product__actions">
-                            <li><a href="#" data-label="Favorite"><i class="exist-heart"></i></a></li>
-                            <li><a href="#" data-label="Compare"><i class="exist-compare"></i></a></li>
-                            <li><a class="ps-modal-trigger" href="#quick-view" data-label="Quick View"><i class="exist-quickview"></i></a></li>
-                        </ul>
-                    </div>
-                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html"> Leather brown belt</a><span class="ps-product__price">$350.00</span>
+                    <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-3.html">Hear The Wind Sing</a><span class="ps-product__price">IDR.149.000,-</span>
                     </div>
                 </div>
                 <div class="ps-product--1" data-mh="product-item">
                     <div class="ps-product__thumbnail">
-                        <div class="ps-badge ps-badge--new"><span>New</span></div><img src="images/product/home-1/8.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
+                        <div class="ps-badge ps-badge--new"><span>Hot</span></div>
+                        <div class="ps-badge ps-badge--sale-off ps-badge--2nd"><span>Best Seller</span></div><img src="images/product/home-1/4.jpg" alt=""><a class="ps-btn ps-product__shopping" href="product-creative-content-4.html"><i class="exist-minicart"></i>View Item</a>
                         <ul class="ps-product__actions">
                             <li><a href="#" data-label="Favorite"><i class="exist-heart"></i></a></li>
                             <li><a href="#" data-label="Compare"><i class="exist-compare"></i></a></li>
                             <li><a class="ps-modal-trigger" href="#quick-view" data-label="Quick View"><i class="exist-quickview"></i></a></li>
                         </ul>
                     </div>
-                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html"> Denim shorts</a><span class="ps-product__price">$5250.00</span>
+                    <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-4.html">Heaven Will Be Boring</a><span class="ps-product__price">IDR.149.000,-
+                    </div>
+                </div>
+                <div class="ps-product--1" data-mh="product-item">
+                    <div class="ps-product__thumbnail"><img src="images/product/home-1/5.jpg" alt=""><a class="ps-btn ps-product__shopping" href="product-creative-content-5.html"><i class="exist-minicart"></i>View Item</a>
+                        <ul class="ps-product__actions">
+                            <li><a href="#" data-label="Favorite"><i class="exist-heart"></i></a></li>
+                            <li><a href="#" data-label="Compare"><i class="exist-compare"></i></a></li>
+                            <li><a class="ps-modal-trigger" href="#quick-view" data-label="Quick View"><i class="exist-quickview"></i></a></li>
+                        </ul>
+                    </div>
+                    <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-5.html">Not A Boozehound</a><span class="ps-product__price">IDR.149.000,-
+                    </div>
+                </div>
+                <div class="ps-product--1" data-mh="product-item">
+                    <div class="ps-product__thumbnail"><img src="images/product/home-1/6.jpg" alt=""><a class="ps-btn ps-product__shopping" href="product-creative-content-6.html"><i class="exist-minicart"></i>View Item</a>
+                        <ul class="ps-product__actions">
+                            <li><a href="#" data-label="Favorite"><i class="exist-heart"></i></a></li>
+                            <li><a href="#" data-label="Compare"><i class="exist-compare"></i></a></li>
+                            <li><a class="ps-modal-trigger" href="#quick-view" data-label="Quick View"><i class="exist-quickview"></i></a></li>
+                        </ul>
+                    </div>
+                    <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-6.html"> STACKO Tee Black</a><span class="ps-product__price">IDR.195.000.-
+                    </div>
+                </div>
+                <div class="ps-product--1" data-mh="product-item">
+                    <div class="ps-product__thumbnail"><img src="images/product/home-1/7.jpg" alt=""><a class="ps-btn ps-product__shopping" href="product-creative-content-7.html"><i class="exist-minicart"></i>View Item</a>
+                        <ul class="ps-product__actions">
+                            <li><a href="#" data-label="Favorite"><i class="exist-heart"></i></a></li>
+                            <li><a href="#" data-label="Compare"><i class="exist-compare"></i></a></li>
+                            <li><a class="ps-modal-trigger" href="#quick-view" data-label="Quick View"><i class="exist-quickview"></i></a></li>
+                        </ul>
+                    </div>
+                    <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-7.html">Ducksquack Tee Black</a><span class="ps-product__price">IDR.195.000,-</span>
+                    </div>
+                </div>
+                <div class="ps-product--1" data-mh="product-item">
+                    <div class="ps-product__thumbnail">
+                        <div class="ps-badge ps-badge--new"><span>Hot</span></div><img src="images/product/home-1/8.jpg" alt=""><a class="ps-btn ps-product__shopping" href="product-creative-content-8.html"><i class="exist-minicart"></i>View Item</a>
+                        <ul class="ps-product__actions">
+                            <li><a href="#" data-label="Favorite"><i class="exist-heart"></i></a></li>
+                            <li><a href="#" data-label="Compare"><i class="exist-compare"></i></a></li>
+                            <li><a class="ps-modal-trigger" href="#quick-view" data-label="Quick View"><i class="exist-quickview"></i></a></li>
+                        </ul>
+                    </div>
+                    <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-8.html">BLOOMY Tee white</a><span class="ps-product__price">IDR.195.000,-</span>
                     </div>
                 </div>
             </div>
