--- a/product-creative-content-2.html
+++ b/product-creative-content-2.html
@@ -139,7 +139,7 @@
                             <h5 class="mt-30"> Size : 500 gr</h5>
                         <div class="ps-product__divider"></div>
                         <div class="ps-product__shopping">
-                            <button class="ps-btn ps-btn--black"><i class="exist-minicart mr-5"></i> Shop Now</button>
+                             <a class="ps-btn ps-btn--black" href="http://line.me/ti/p/~@booz.on"><i class="exist-minicart mr-5"></i> Shop Now</a>
                             <ul class="ps-product__cart-action">
                                 <li><a href="#"><i class="exist-heart"></i>Best Seller Product</a></li>
                                 <li><a href="#"><i class=""></i></a></li>
@@ -190,99 +190,96 @@
             <div class="ps-slider--related-products owl-slider" data-owl-auto="true" data-owl-loop="true" data-owl-speed="5000" data-owl-gap="20" data-owl-nav="true" data-owl-dots="false" data-owl-item="6" data-owl-item-xs="1" data-owl-item-sm="1" data-owl-item-md="1" data-owl-item-lg="1" data-owl-duration="1000" data-owl-mousedrag="on" data-owl-nav-left="&lt;i class='exist-leftarrow'&gt;&lt;/i&gt;" data-owl-nav-right="&lt;i class='exist-rightarrow'&gt;&lt;/i&gt;">
                 <div class="ps-product--1" data-mh="product-item">
                     <div class="ps-product__thumbnail">
-                        <div class="ps-badge ps-badge--hot"><span>hot</span></div>
-                        <div class="ps-badge ps-badge--sale-off ps-badge--2nd"><span>-25%</span></div><img src="images/product/home-1/1.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
+                        <div class="ps-badge ps-badge--hot"><span>Hot</span></div>
+                        <div class="ps-badge ps-badge--sale-off ps-badge--2nd"><span>Best Seller</span></div><img src="images/product/home-1/1.jpg" alt=""><a class="ps-btn ps-product__shopping" href="product-creative-content-1.html"><i class="exist-minicart"></i>View Item</a>
                         <ul class="ps-product__actions">
                             <li><a href="#" data-label="Favorite"><i class="exist-heart"></i></a></li>
                             <li><a href="#" data-label="Compare"><i class="exist-compare"></i></a></li>
                             <li><a class="ps-modal-trigger" href="#quick-view" data-label="Quick View"><i class="exist-quickview"></i></a></li>
                         </ul>
                     </div>
-                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html"> T-shirt with slogan</a><span class="ps-product__price">$5250.00</span>
+                    <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-1.html">Take Your Time</a><span class="ps-product__price">IDR.149.000,-</span>
                     </div>
                 </div>
                 <div class="ps-product--1" data-mh="product-item">
-                    <div class="ps-product__thumbnail"><img src="images/product/home-1/2.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
+                    <div class="ps-product__thumbnail"><img src="images/product/home-1/2.jpg" alt=""><a class="ps-btn ps-product__shopping" href="product-creative-content-2.html"><i class="exist-minicart"></i>View Item</a>
                         <ul class="ps-product__actions">
                             <li><a href="#" data-label="Favorite"><i class="exist-heart"></i></a></li>
                             <li><a href="#" data-label="Compare"><i class="exist-compare"></i></a></li>
                             <li><a class="ps-modal-trigger" href="#quick-view" data-label="Quick View"><i class="exist-quickview"></i></a></li>
                         </ul>
                     </div>
-                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html"> White crossbody bag</a><span class="ps-product__price">$1250.00</span>
-                    </div>
-                </div>
-                <div class="ps-product--1" data-mh="product-item">
-                    <div class="ps-product__thumbnail">
-                        <div class="ps-badge ps-badge--new"><span>New</span></div><img src="images/product/home-1/3.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
-                        <ul class="ps-product__actions">
-                            <li><a href="#" data-label="Favorite"><i class="exist-heart"></i></a></li>
-                            <li><a href="#" data-label="Compare"><i class="exist-compare"></i></a></li>
-                            <li><a class="ps-modal-trigger" href="#quick-view" data-label="Quick View"><i class="exist-quickview"></i></a></li>
-                        </ul>
-                    </div>
-                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html"> Velvet backpack</a><span class="ps-product__price">$5250.00</span>
+                    <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-2.html">Only Joke & Below</a><span class="ps-product__price">IDR.149.000,-</span>
                     </div>
                 </div>
                 <div class="ps-product--1" data-mh="product-item">
                     <div class="ps-product__thumbnail">
-                        <div class="ps-badge ps-badge--new"><span>New</span></div>
-                        <div class="ps-badge ps-badge--sale-off ps-badge--2nd"><span>-25%</span></div><img src="images/product/home-1/4.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
+                        <div class="ps-badge ps-badge--new"><span>New</span></div><img src="images/product/home-1/3.jpg" alt=""><a class="ps-btn ps-product__shopping" href="product-creative-content-3.html"><i class="exist-minicart"></i>View Item</a>
                         <ul class="ps-product__actions">
                             <li><a href="#" data-label="Favorite"><i class="exist-heart"></i></a></li>
                             <li><a href="#" data-label="Compare"><i class="exist-compare"></i></a></li>
                             <li><a class="ps-modal-trigger" href="#quick-view" data-label="Quick View"><i class="exist-quickview"></i></a></li>
                         </ul>
                     </div>
-                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html"> Square cream sunglasses</a><span class="ps-product__price">$5250.00
-                    <del>$725.00</del></span>
-                    </div>
-                </div>
-                <div class="ps-product--1" data-mh="product-item">
-                    <div class="ps-product__thumbnail"><img src="images/product/home-1/5.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
-                        <ul class="ps-product__actions">
-                            <li><a href="#" data-label="Favorite"><i class="exist-heart"></i></a></li>
-                            <li><a href="#" data-label="Compare"><i class="exist-compare"></i></a></li>
-                            <li><a class="ps-modal-trigger" href="#quick-view" data-label="Quick View"><i class="exist-quickview"></i></a></li>
-                        </ul>
-                    </div>
-                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html"> Shirt Regular fit</a><span class="ps-product__price">$95.00
-                    <del>$725.00</del></span>
-                    </div>
-                </div>
-                <div class="ps-product--1" data-mh="product-item">
-                    <div class="ps-product__thumbnail"><img src="images/product/home-1/6.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
-                        <ul class="ps-product__actions">
-                            <li><a href="#" data-label="Favorite"><i class="exist-heart"></i></a></li>
-                            <li><a href="#" data-label="Compare"><i class="exist-compare"></i></a></li>
-                            <li><a class="ps-modal-trigger" href="#quick-view" data-label="Quick View"><i class="exist-quickview"></i></a></li>
-                        </ul>
-                    </div>
-                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html"> T-shirt with slogan</a><span class="ps-product__price">$1250.00
-                    <del>$725.00</del></span>
-                    </div>
-                </div>
-                <div class="ps-product--1" data-mh="product-item">
-                    <div class="ps-product__thumbnail"><img src="images/product/home-1/7.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
-                        <ul class="ps-product__actions">
-                            <li><a href="#" data-label="Favorite"><i class="exist-heart"></i></a></li>
-                            <li><a href="#" data-label="Compare"><i class="exist-compare"></i></a></li>
-                            <li><a class="ps-modal-trigger" href="#quick-view" data-label="Quick View"><i class="exist-quickview"></i></a></li>
-                        </ul>
-                    </div>
-                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html"> Leather brown belt</a><span class="ps-product__price">$350.00</span>
+                    <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-3.html">Hear The Wind Sing</a><span class="ps-product__price">IDR.149.000,-</span>
                     </div>
                 </div>
                 <div class="ps-product--1" data-mh="product-item">
                     <div class="ps-product__thumbnail">
-                        <div class="ps-badge ps-badge--new"><span>New</span></div><img src="images/product/home-1/8.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
+                        <div class="ps-badge ps-badge--new"><span>Hot</span></div>
+                        <div class="ps-badge ps-badge--sale-off ps-badge--2nd"><span>Best Seller</span></div><img src="images/product/home-1/4.jpg" alt=""><a class="ps-btn ps-product__shopping" href="product-creative-content-4.html"><i class="exist-minicart"></i>View Item</a>
                         <ul class="ps-product__actions">
                             <li><a href="#" data-label="Favorite"><i class="exist-heart"></i></a></li>
                             <li><a href="#" data-label="Compare"><i class="exist-compare"></i></a></li>
                             <li><a class="ps-modal-trigger" href="#quick-view" data-label="Quick View"><i class="exist-quickview"></i></a></li>
                         </ul>
                     </div>
-                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html"> Denim shorts</a><span class="ps-product__price">$5250.00</span>
+                    <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-4.html">Heaven Will Be Boring</a><span class="ps-product__price">IDR.149.000,-
+                    </div>
+                </div>
+                <div class="ps-product--1" data-mh="product-item">
+                    <div class="ps-product__thumbnail"><img src="images/product/home-1/5.jpg" alt=""><a class="ps-btn ps-product__shopping" href="product-creative-content-5.html"><i class="exist-minicart"></i>View Item</a>
+                        <ul class="ps-product__actions">
+                            <li><a href="#" data-label="Favorite"><i class="exist-heart"></i></a></li>
+                            <li><a href="#" data-label="Compare"><i class="exist-compare"></i></a></li>
+                            <li><a class="ps-modal-trigger" href="#quick-view" data-label="Quick View"><i class="exist-quickview"></i></a></li>
+                        </ul>
+                    </div>
+                    <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-5.html">Not A Boozehound</a><span class="ps-product__price">IDR.149.000,-
+                    </div>
+                </div>
+                <div class="ps-product--1" data-mh="product-item">
+                    <div class="ps-product__thumbnail"><img src="images/product/home-1/6.jpg" alt=""><a class="ps-btn ps-product__shopping" href="product-creative-content-6.html"><i class="exist-minicart"></i>View Item</a>
+                        <ul class="ps-product__actions">
+                            <li><a href="#" data-label="Favorite"><i class="exist-heart"></i></a></li>
+                            <li><a href="#" data-label="Compare"><i class="exist-compare"></i></a></li>
+                            <li><a class="ps-modal-trigger" href="#quick-view" data-label="Quick View"><i class="exist-quickview"></i></a></li>
+                        </ul>
+                    </div>
+                     <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-6.html"> STACKO Tee Black</a><span class="ps-product__price">IDR.195.000.-
+                    </div>
+                </div>
+                <div class="ps-product--1" data-mh="product-item">
+                    <div class="ps-product__thumbnail"><img src="images/product/home-1/7.jpg" alt=""><a class="ps-btn ps-product__shopping" href="product-creative-content-7.html"><i class="exist-minicart"></i>View Item</a>
+                        <ul class="ps-product__actions">
+                            <li><a href="#" data-label="Favorite"><i class="exist-heart"></i></a></li>
+                            <li><a href="#" data-label="Compare"><i class="exist-compare"></i></a></li>
+                            <li><a class="ps-modal-trigger" href="#quick-view" data-label="Quick View"><i class="exist-quickview"></i></a></li>
+                        </ul>
+                    </div>
+                    <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-7.html">Ducksquack Tee Black</a><span class="ps-product__price">IDR.195.000,-</span>
+                    </div>
+                </div>
+                <div class="ps-product--1" data-mh="product-item">
+                    <div class="ps-product__thumbnail">
+                        <div class="ps-badge ps-badge--new"><span>Hot</span></div><img src="images/product/home-1/8.jpg" alt=""><a class="ps-btn ps-product__shopping" href="product-creative-content-8.html"><i class="exist-minicart"></i>View Item</a>
+                        <ul class="ps-product__actions">
+                            <li><a href="#" data-label="Favorite"><i class="exist-heart"></i></a></li>
+                            <li><a href="#" data-label="Compare"><i class="exist-compare"></i></a></li>
+                            <li><a class="ps-modal-trigger" href="#quick-view" data-label="Quick View"><i class="exist-quickview"></i></a></li>
+                        </ul>
+                    </div>
+                    <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-8.html">BLOOMY Tee white</a><span class="ps-product__price">IDR.195.000,-</span>
                     </div>
                 </div>
             </div>
