--- a/shop-category-Tshirt.html
+++ b/shop-category-Tshirt.html
@@ -98,20 +98,22 @@
                                             <li><a href="#"><i class="exist-quickview"></i></a></li>
                                         </ul>
                                     </div>
-                                    <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-6.html">Tshirt-1</a>
-                                        <br><span class="ps-product__price">$5250.00</div>
+                                    <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-6.html">STACKO Tee Black</a>
+                                        <br><span class="ps-product__price">IDR.195.000,-</div>
                                 </div>
                             </div>
                         </div>
                         <div class="grid-item large">
                             <div class="grid-item__content-wrapper">
                                 <div class="ps-product--metro">
-                                    <div class="ps-product__thumbnail"><img src="images/shop/Tshirt-2.jpg" alt=""><a class="" href="#"><i class=""></i></a>
+                                    <div class="ps-product__thumbnail"><img src="images/shop/Tshirt-90.jpg" alt=""><a class="ps-btn ps-product__shopping" href="product-creative-content-8.html"><i class="exist-minicart"></i>Shop Now</a>
                                         <ul class="ps-product__actions">
                                             <li><a href="#"><i class="exist-heart"></i></a></li>
                                             <li><a href="#"><i class="exist-compare"></i></a></li>
                                             <li><a href="#"><i class="exist-quickview"></i></a></li>
                                         </ul>
+                                        <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-7.html">BLOOMY Tee white</a>
+                                        <br><span class="ps-product__price">IDR.195.000,-</div>
                                     </div>
                                 </div>
                             </div>
@@ -126,8 +128,8 @@
                                             <li><a href="#"><i class="exist-quickview"></i></a></li>
                                         </ul>
                                     </div>
-                                    <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-7.html">T-shirt-2</a>
-                                        <br><span class="ps-product__price">$5250.00</div>
+                                    <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-7.html">Ducksquack Tee Black</a>
+                                        <br><span class="ps-product__price">IDR.195.000,-</div>
                                 </div>
                             </div>
                         </div>
@@ -141,8 +143,8 @@
                                             <li><a href="#"><i class="exist-quickview"></i></a></li>
                                         </ul>
                                     </div>
-                                    <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-8.html">Tshirt-3</a>
-                                        <br><span class="ps-product__price">$5250.00</div>
+                                    <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-8.html">Magic Tee White</a>
+                                        <br><span class="ps-product__price">IDR.195.000,-</div>
                                 </div>
                             </div>
                         </div>
@@ -156,8 +158,8 @@
                                             <li><a href="#"><i class="exist-quickview"></i></a></li>
                                         </ul>
                                     </div>
-                                    <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-9.html">T-shirt-4</a>
-                                        <br><span class="ps-product__price">$5250.00</div>
+                                    <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-9.html"> Burning Rose Tee Baby Blue</a>
+                                        <br><span class="ps-product__price">IDR.195.000,-</div>
                                 </div>
                             </div>
                         </div>
@@ -171,23 +173,23 @@
                                             <li><a href="#"><i class="exist-quickview"></i></a></li>
                                         </ul>
                                     </div>
-                                   <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-10.html">T-shirt-5</a>
-                                        <br><span class="ps-product__price">$5250.00</div>
+                                   <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-10.html"> FRITILLARY Tee Beige</a>
+                                        <br><span class="ps-product__price">IDR.195.000,-</div>
                                 </div>
                             </div>
                         </div>
                         <div class="grid-item">
                             <div class="grid-item__content-wrapper">
                                 <div class="ps-product--metro">
-                                    <div class="ps-product__thumbnail"><img src="images/shop/Tshirt-7.jpg" alt=""><a class="ps-btn ps-product__shopping" href="product-creative-content-12.html"><i class="exist-minicart"></i>Sold Out</a>
+                                    <div class="ps-product__thumbnail"><img src="images/shop/Tshirt-7.jpg" alt=""><a class="ps-btn ps-product__shopping" href="product-creative-content-12.html"><i class="exist-minicart"></i>View Item</a>
                                         <ul class="ps-product__actions">
                                             <li><a href="#"><i class="exist-heart"></i></a></li>
                                             <li><a href="#"><i class="exist-compare"></i></a></li>
                                             <li><a href="#"><i class="exist-quickview"></i></a></li>
                                         </ul>
                                     </div>
-                                    <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-11.html">T-shirt-6</a>
-                                        <br><span class="ps-product__price">$5250.00</div>
+                                    <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-11.html">Tour Longsleeve Tee White</a>
+                                        <br><span class="ps-product__price">IDR.195.000,-</div>
                                 </div>
                             </div>
                         </div>
@@ -202,8 +204,8 @@
                                             <li><a href="#"><i class="exist-quickview"></i></a></li>
                                         </ul>
                                     </div>
-                                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html">T-shirt-7</a>
-                                        <br><span class="ps-product__price">$5250.00</div>
+                                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html"></a>
+                                        <br><span class="ps-product__price"></div>
                                 </div>
                             </div>
                         </div>
@@ -218,8 +220,8 @@
                                             <li><a href="#"><i class="exist-quickview"></i></a></li>
                                         </ul>
                                     </div>
-                                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html">T-shirt-8</a>
-                                        <br><span class="ps-product__price">$5250.00</div>
+                                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html"></a>
+                                        <br><span class="ps-product__price"></div>
                                 </div>
                             </div>
                         </div>
